# entropy-dev-console

./: .gitignore  Cargo.toml  NOTES.md  PRODUCT.md  README.md
assets/: index.html  main.js
src/: lib.rs
src-tauri/: package.json  tauri.conf.json
src-tauri/assets/: main.js  style.css
src-tauri/src/: main.rs
