[package]
name = "entropy-console"
version = "0.1.0"
description = "Entropy Developer Console - Network Health Monitor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "entropy_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
